# cpaf

./: .gitignore  CBSIntroduction.page  CMakeLists.txt  DoxyS.ignore  DoxySfile  Doxyfile  README.md  build_3rdparty_cpaf.sh  conanfile.txt  cpaf.BuildConfig.cbs  cpaf.DebugMsgs.cbs  cpaf.cbs  cpaf_admin.kdevelop  cpaf_mainpage.page  env.bat  env.cpaf  noter.txt
cpaf_libs/: CMakeLists.txt  cpaf_libs.BuildConfig.cbs  cpaf_libs.cbs  cpaf_libs.dir
cpaf_libs/audio/: CMakeLists.txt  cpaf_audio_device.cpp  cpaf_audio_device.h  cpaf_audio_device__godot.cpp  cpaf_audio_device__godot.h  cpaf_audio_device__sdl2.cpp  cpaf_audio_device__sdl2.h  cpaf_audio_device_base.cpp  cpaf_audio_device_base.h  cpaf_audio_system.cpp  cpaf_audio_system.h  cpaf_audio_system__godot.cpp  cpaf_audio_system__godot.h  cpaf_audio_system__sdl2.cpp  cpaf_audio_system__sdl2.h  cpaf_audio_system_base.cpp  cpaf_audio_system_base.h  cpaf_audio_types.cpp  cpaf_audio_types.h
cpaf_libs/compression/: CMakeLists.txt  compression_utils.cpp  compression_utils.h  cpaf_compression.cbs  cpaf_compression_functions.cpp  cpaf_compression_functions.h  file.cpp  file.h
cpaf_libs/concurrent/: CMakeLists.txt  ConcurentArrayQueue.java  ModuloFifo.h  MultipleReaderWriteQueue.cpp  MultipleWriterSingleReaderFifo.h  SingleWriterSingleReaderLocklessFifo.h  align_macros.h  cpaf_concurrent.cbs
cpaf_libs/containers/: CMakeLists.txt  cpaf_container_utils.cpp  cpaf_container_utils.h  cpaf_dynamic_array.hpp  cpaf_string8.cpp  cpaf_string8.h
cpaf_libs/crypto/: CMakeLists.txt  crypto_hash.cpp  crypto_hash.h  md5sum.cpp  md5sum.h
cpaf_libs/dircomp/: CMakeLists.txt  dircomp.cbs  dircomp.cpp
cpaf_libs/economic/: CMakeLists.txt  cpaf_exchange_rates.cpp  cpaf_exchange_rates.h
cpaf_libs/elasticsearch/: CMakeLists.txt  cpaf_elasticsearch.cpp  cpaf_elasticsearch.h  es_connection.cpp  es_connection.h  es_utils.cpp  es_utils.h
cpaf_libs/filesystem/: CMakeLists.txt  cpaf_file_directory_functions.cpp  cpaf_file_directory_functions.h  cpaf_filesystem.cbs  cpaf_special_dirs.cpp  cpaf_special_dirs.h  filesystem.dir
cpaf_libs/graphics/: CMakeLists.txt  cpaf_graphics_surface.cpp  cpaf_graphics_surface.h  cpaf_graphics_surface__sdl2.cpp  cpaf_graphics_surface__sdl2.h  cpaf_graphics_surface_base.cpp  cpaf_graphics_surface_base.h  cpaf_graphics_system.cpp  cpaf_graphics_system.h  cpaf_graphics_system__sdl2.cpp  cpaf_graphics_system__sdl2.h  cpaf_graphics_system_base.cpp  cpaf_graphics_system_base.h  cpaf_graphics_types.h  graphics.dir
cpaf_libs/gui/: CMakeLists.txt  DoxyS.ignore  GuiDesignDoc.page  app.cpp  app.h  application.cpp  application.h  color.cpp  color.h  dpi_handler.h  event.cpp  event.h  events.h  gui-overview.qmodel  gui.cbs  gui.dir  gui_types.cpp  gui_types.h  input_types.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  resources.h  system.cpp  system.h  system_render.cpp  system_render.h  system_window.cpp  system_window.h  texture.cpp  texture.h  utils.cpp  utils.h  window.cpp  window.h
cpaf_libs/include/: cpaf.h
cpaf_libs/locale/: CMakeLists.txt  language_codes.cpp  language_codes.h  translator.cpp  translator.h  translator_if.cpp  translator_if.h  ui_translator.cpp  ui_translator.h
cpaf_libs/math/: CMakeLists.txt  DoxyS.ignore  cpaf_math.cbs  math.dir
cpaf_libs/net/: CMakeLists.txt  cpaf_http_convenience.cpp  cpaf_http_convenience.h  cpaf_net.cbs  cpaf_url.cpp  cpaf_url.h  cpaf_url_string_functions.cpp  cpaf_url_string_functions.h  cpaf_webcc_client.cpp  cpaf_webcc_client.h  net.dir
cpaf_libs/sdl2/: CMakeLists.txt  cpaf_sdl2.cpp  cpaf_sdl2.h  sdl2.dir  sdl2_utils.cpp  sdl2_utils.h
cpaf_libs/semantic/: CMakeLists.txt  cpaf_semantic.cpp  cpaf_semantic.h
cpaf_libs/streams/: CMakeLists.txt  cpaf_json_streams.cpp  cpaf_json_streams.h  cpaf_stream_utils.cpp  cpaf_stream_utils.h  cpaf_streams.cpp  cpaf_streams.h
cpaf_libs/system/: CMakeLists.txt  DoxyS.ignore  cpaf_session.cpp  cpaf_session.h  cpaf_system.cbs  cpaf_system_info.cpp  cpaf_system_info.h  system.dir
cpaf_libs/test_exe/: CMakeLists.txt  MegastoreSe.xml  curl_test.cpp  test_exe.cbs  test_exe.cpp  zlib_test.cpp
cpaf_libs/test_lib/: CMakeLists.txt  test_lib.cbs  test_lib.cpp  test_lib.h
cpaf_libs/time/: CMakeLists.txt  cpaf_time.cpp  cpaf_time.h
cpaf_libs/torrent/: CMakeLists.txt  file.cpp  file.h  files.cpp  files.h  server.cpp  server.h  streaming_cache.cpp  streaming_cache.h  temp_storage.cpp  temp_storage.h  torrent.cpp  torrent.dir  torrent.h  torrent_utils.cpp  torrent_utils.h  torrents.cpp  torrents.h
cpaf_libs/unicode/: CMakeLists.txt  cpaf_u16string_parse_numbers.cpp  cpaf_u16string_parse_numbers.h  cpaf_u16string_split.cpp  cpaf_u16string_split.h  cpaf_u16string_utils.cpp  cpaf_u16string_utils.h  cpaf_u8string_parse_numbers.cpp  cpaf_u8string_parse_numbers.h  cpaf_u8string_split.cpp  cpaf_u8string_split.h  cpaf_u8string_utils.cpp  cpaf_u8string_utils.h  cpaf_unicode_chars.hpp  cpaf_unicode_common.h
cpaf_libs/utils/: CMakeLists.txt  cpaf_debug_utils.cpp  cpaf_debug_utils.h  cpaf_json_utils.cpp  cpaf_json_utils.h  cpaf_parse_numbers_generic.hpp  cpaf_stl_utils.h  cpaf_string_utils.cpp  cpaf_string_utils.hpp  cpaf_utils.cbs
cpaf_libs/video/: CMakeLists.txt  audio_resampler.cpp  audio_resampler.h  audio_types_convert.cpp  audio_types_convert.h  av_codec.cpp  av_codec.h  av_codec_context.cpp  av_codec_context.h  av_codec_parameters.cpp  av_codec_parameters.h  av_format_context.cpp  av_format_context.h  av_format_context_base.cpp  av_format_context_base.h  av_format_context_ffmpeg.cpp  av_format_context_ffmpeg.h  av_format_context_torrent.cpp  av_format_context_torrent.h  av_frame.cpp  av_frame.h  av_options.cpp  av_options.h  av_packet.cpp  av_packet.h  av_samples_buffer.cpp  av_samples_buffer.h  av_samples_queue.cpp  av_samples_queue.h  av_util.cpp  av_util.h  ff_audio_format_t.cpp  ff_audio_format_t.h  media_stream_time.cpp  media_stream_time.h  (+6 more)
cul/: CMakeLists.txt  DoxyS.ignore  cpaf_libs_keeping_up_to_date.md  cul.dir
emscripten_playground/: CMakeLists.txt  emscripten_playground.cpp  emscripten_playground.h
include/: CMakeLists.txt
(+1040 files in other folders)
