if ( NOT (CMAKE_SYSTEM_NAME MATCHES "Emscripten") )
    add_subdirectory(unicode)
    add_subdirectory(crypto)
    add_subdirectory(utils)
    add_subdirectory(containers)
    add_subdirectory(system)
    add_subdirectory(time)
    add_subdirectory(compression)
    add_subdirectory(concurrent)
    add_subdirectory(filesystem)
    add_subdirectory(math)
    add_subdirectory(net)
    add_subdirectory(elasticsearch)
    add_subdirectory(streams)
    add_subdirectory(economic)
    add_subdirectory(semantic)
    add_subdirectory(torrent)
    add_subdirectory(graphics)
    add_subdirectory(audio)
    add_subdirectory(video)
endif()
add_subdirectory(sdl2)
